--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Storymaps-Series",
-  "version": "1.0.0",
+  "name": "Storymaps-MapSeries",
+  "version": "1.0.1",
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-contrib-clean": "~0.4.0",
