--- a/circle.yml
+++ b/circle.yml
@@ -16,7 +16,7 @@ deployment:
   prod:
     branch: master
     commands:
-      - aws s3 sync . s3://templates.maptiks.com/esri/apps/storymap-series/ --delete
+      - aws s3 sync src/ s3://templates.maptiks.com/esri/apps/storymap-series/ --delete --quiet --quiet
       - >
         curl -X DELETE "https://api.cloudflare.com/client/v4/zones/34e8519f80106c3699e76002b4153ce5/purge_cache"
         -H "X-Auth-Email: will@sparkgeo.com"
@@ -28,7 +28,7 @@ deployment:
     owner: sparkgeo
     commands:
       # - find . -name 'index.html' -exec sed -i 's/cdn.maptiks.com/cdn-staging.maptiks.com/g' {} +
-      - aws s3 sync . s3://templates-staging.maptiks.com/esri/apps/storymap-series/ --delete
+      - aws s3 sync src/ s3://templates-staging.maptiks.com/esri/apps/storymap-series/ --delete --quiet
       - >
         curl -X DELETE "https://api.cloudflare.com/client/v4/zones/34e8519f80106c3699e76002b4153ce5/purge_cache"
         -H "X-Auth-Email: will@sparkgeo.com"
@@ -39,7 +39,7 @@ deployment:
     branch: develop
     commands:
       # - find . -name 'index.html' -exec sed -i 's/cdn.maptiks.com/cdn-dev.maptiks.com/g' {} +
-      - aws s3 sync . s3://templates-dev.maptiks.com/esri/apps/storymap-series/ --delete
+      - aws s3 sync src/ s3://templates-dev.maptiks.com/esri/apps/storymap-series/ --delete --quiet
       - >
         curl -X DELETE "https://api.cloudflare.com/client/v4/zones/34e8519f80106c3699e76002b4153ce5/purge_cache"
         -H "X-Auth-Email: will@sparkgeo.com"
