--- a/.jshintrc
+++ b/.jshintrc
@@ -20,7 +20,9 @@
 		"History": false,
 
 		"CKEDITOR": false,
-		"CKEDITOR_BASEPATH": true
+		"CKEDITOR_BASEPATH": true,
+      
+        "L": true
 	},
 
 	"expr": true,
